--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+clap = { version = "4.5", features = ["derive"] }
+leveldb = { version = "0.8", default-features = false }
+db-key = "0.0.5"
+hex = "0.4"
+csv = "1.3"
+anyhow = "1.0"
