--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0"
+bitcoin-bech32 = "0.13"
+bs58 = "0.5"
 clap = { version = "4.5", features = ["derive"] }
-leveldb = { version = "0.8", default-features = false }
+csv = "1.3"
 db-key = "0.0.5"
 hex = "0.4"
-csv = "1.3"
-anyhow = "1.0"
+leveldb = { version = "0.8", default-features = false }
+ripemd = "0.1"
+sha2 = "0.10"
