--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ db-key = "0.0.5"
 hex = "0.4"
 leveldb = { version = "0.8", default-features = false }
 ripemd = "0.1"
+secp256k1 = "0.30"
 sha2 = "0.10"
